构建镜像的时候优化Tomcat和JVM